# Leanna

./: CMakeLists.txt  Cargo.toml
docs/: Vectors.md
docs/.obsidian/: workspace.json
docs/Mathematica/: Vectors.md
src/: main.rs
src/Mathematica/: leanna_vector.rs.bk  mod.rs  vectors.rs
src/components/: Camera3D.cc
src/core/mathematica/linear_algebra/: a.out  matrix.cc  vectors.cc  vectors.hh
src/utils/: random.cc  random.hh
